--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flame: ^1.9.1
   get_it: ^7.6.4
   flutter_riverpod: ^2.4.0
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
