--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   get_it: ^7.6.4
   flutter_riverpod: ^2.4.0
   crypto: ^3.0.3
+  cloud_firestore: ^4.12.2
+  firebase_core: ^2.21.0
 
 dev_dependencies:
   flutter_test:
